--- a/mith/cutters/project/{{cookiecutter.package_name}}/pyproject.toml
+++ b/mith/cutters/project/{{cookiecutter.package_name}}/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-polymith = "^1.0.0"
+mith = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
