--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 SERVICE_REVIEWS=mith.example.services.reviews
 SERVICE_PRODUCTS=mith.example.services.products
 SERVICE_USERS=mith.example.services.users
+
+postgres_writer_host=localhost
+postgres_db=postgres
+postgres_user=postgres
+postgres_password=postgres
