--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ typer = "^0.4.0"
 SQLAlchemy = {extras = ["mypy"], version = "^1.4.29"}
 asyncpg = "^0.25.0"
 orjson = "^3.6.5"
+psycopg2-binary = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -25,6 +26,7 @@ black = "^21.11b1"
 flake8 = "^4.0.1"
 mypy = "^0.910"
 pytest-asyncio = "^0.16.0"
+isort = "^5.10.1"
 
 
 [tool.poetry.scripts]
