--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     image: postgres:13.2
     ports:
       - 5432:5432
+    expose:
+      - 5432
     environment:
       - POSTGRES_PASSWORD=postgres
   app:
